--- a/stylobgt.css
+++ b/stylobgt.css
@@ -1281,5 +1281,5 @@ html, body {
     overflow-x: hidden !important;
 }
 body{
-    overflow-y: hidden !important;
+    /*overflow-y: hidden !important;*/
 }
