--- a/constructor_baget/style.css
+++ b/constructor_baget/style.css
@@ -3312,7 +3312,7 @@ body {
   }
   #bmenu a,
   #custom-baget-me a{
-    max-width: 120px;
+    /*max-width: 120px;*/
     text-decoration: none;
   }
   .catalog-price{
@@ -3343,6 +3343,53 @@ body {
   .name-header{
     font-size: 28px;
   }
+  .sorter-menu{
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  #bmenu{
+    top: 1%;
+    width: 98%;
+    left: 2%;
+    height: 95vh;
+    padding-bottom: 5vh;
+  }
+  .sort-b{
+    height: auto;
+  }
+  .bmenu-open{
+    padding: 1px;
+  }
+  .sort-margin-y {
+    margin-top: 0px;
+    margin-bottom: 5px;
+  }
+  #search-article{
+    max-width: 100% !important;
+    padding: 3px !important;
+  }
+  .nalich2, .nalich1{
+    padding: 4px !important;
+    height: auto;
+    font-size: 13px !important;
+    width: auto !important;
+  }
+  .catalog-item{
+    width: 100% !important;
+  }
+  /*#addBagetBlock .my-2{
+    margin-top: 3px !important;
+    margin-bottom: 3px !important;
+    padding: 0px !important;
+  }
+
+  #addBagetBlock .mx-2{
+    margin-left: 3px !important;
+    margin-right: 3px !important;
+  }*/
+  #addBagetBlock{
+    padding-bottom: 100px !important;
+  }
 }
 .screen .container {
   padding: 0px;
@@ -3350,4 +3397,7 @@ body {
 .my-2{
   margin-top: 0.1rem!important;
   margin-bottom: 0.1rem!important;
+}
+.catalog-item{
+  width: 100% !important;
 }
