--- a/constructor_baget/style.css
+++ b/constructor_baget/style.css
@@ -3257,7 +3257,7 @@ body {
     padding: 10px;
   }
   .custom-margin-top {
-    padding-top: 250px;
+    padding-top: 70%;
   }
 
   .baget-type-menu .col {
